themes/132_anime_card/scss/theme/style.scss
:root {
  --reading-font-size: 50px;
  --sentence-font-size: 30px;
  --word-font-size: 50px;

  --reading-pitch-font-size: 30px;
  --full-sentence-font-size: 25px;
}

.night_mode {
  --accent: gold;

  /* removes blockquote style */
  --background-darken: rgba(0, 0, 0, 0);

  --text-color: #bdbdbd;
}


.card {
  font-family: notoserif;
}


/* centers the full sentence */
.full-sentence-center {
  display: block;
}
.full-sentence {
  margin: 0px;
  text-align: center;
}


/* removes blockquote style */
.glossary-blockquote {
  text-align: center;
  margin: 10px 5px;
  padding: 0px;
  border: none;
}


.answer-border {
  margin-top: 20px;
  width: 100%;
}


/* increases the font size of the primary definition */
.glossary-blockquote--primary-definition {
  --glossary-font-size: 24px;
}
/* removes the numbers and centers*/
.glossary-text--primary-definition ol {
  list-style: none;
  padding-left: 0em;
}
.glossary-text--primary-definition ol li {
  text-align: center;
}


.image-center {
  /* centers image */
  display: flex;
}
.dh-right {
  /* centers image */
  margin-left: auto;
  margin-right: auto;
  max-width: inherit;
  max-height: inherit;

  /* adds extra space above and below image */
  margin-top: 10px;
  margin-bottom: 10px;
}
.dh-right--contains-image {
  /* removes additional left padding */
  padding-left: 0px;
}


/* removes rounded edges */
.dh-right__img-container-stop-blur-edges, .dh-right__img {
  border-radius: 0px;
}


/* makes image bigger */
.dh-right__img {
  max-width: 600px;
  max-height: 300px;
}


/* removes additional padding (previously used to center the stuff to the left of the image) */
.dh-left {
  padding: 0em;
}

.dh-left__word-pitch {
  margin-top: 5px;
}


/* makes word pitch in serif font */
.dh-left__word-pitch {
  font-family: notoserif;
}


/* removes ruby text on back side word */
.dh-left__reading ruby rt {
  display: none;
}



/* extra stuff is mostly hidden until hover */
.glossary-details{
  opacity: 0.2;
}
.glossary-details:hover{
  opacity: 1;
}

